--- a/GP.cabal
+++ b/GP.cabal
@@ -20,6 +20,6 @@ executable GP
   main-is:             GRPPool.hs
   -- other-modules:
   other-extensions:    Safe
-  build-depends:       base >=4.8 && <4.9, random >=1.1 && <1.2, directory >=1.2 && <1.3, process >=1.2 && <1.3, containers >=0.5 && <0.6, rosezipper >=0.2 && <0.3, parallel-io >=0.3 && <0.4, haskell-src-exts >=1.16 && <1.17, strict >=0.3, split >=0.2 
+  build-depends:       base >=4.8 && <4.9, random >=1.1 && <1.2, directory >=1.2 && <1.3, process >=1.2 && <1.3, containers >=0.5 && <0.6, rosezipper >=0.2 && <0.3, parallel-io >=0.3 && <0.4, haskell-src-exts >=1.16 && <1.17, strict >=0.3, split >=0.2, gloss >=1.9.4.1
   hs-source-dirs:      src
   default-language:    Haskell2010
