--- a/GP.cabal
+++ b/GP.cabal
@@ -35,6 +35,7 @@ executable GP
                        async,
                        SafeSemaphore,
                        criterion,
-                       hint
+                       hint,
+                       bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
