--- a/GP.cabal
+++ b/GP.cabal
@@ -31,6 +31,30 @@ executable GP
                        haskell-src-exts,
                        strict,
                        split,
+                       async,
+                       SafeSemaphore,
+                       criterion,
+                       hint,
+                       bytestring
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+
+
+executable Frontend
+  main-is:             Frontend.hs
+  -- ghc-options:         -O2 -threaded
+  -- other-modules:
+  other-extensions:    Safe
+  build-depends:
+                       base,
+                       random,
+                       directory,
+                       process,
+                       containers,
+                       rosezipper,
+                       haskell-src-exts,
+                       strict,
+                       split,
                        gloss,
                        async,
                        SafeSemaphore,
