fixed a strictness-related space leak when eval'ing the type of an expr

--- a/GP.cabal
+++ b/GP.cabal
@@ -35,7 +35,8 @@ executable GP
                        SafeSemaphore,
                        criterion,
                        hint,
-                       bytestring
+                       bytestring,
+                       deepseq
   hs-source-dirs:      src
   default-language:    Haskell2010
 
