--- a/GP.cabal
+++ b/GP.cabal
@@ -61,6 +61,7 @@ executable Frontend
                        SafeSemaphore,
                        criterion,
                        hint,
-                       bytestring
+                       bytestring,
+                       deepseq
   hs-source-dirs:      src
   default-language:    Haskell2010
