Now with new, more agnostic root genome, also features src-independant compilation rate - combination with old genome unresearched

--- a/GP.cabal
+++ b/GP.cabal
@@ -36,7 +36,8 @@ executable GP
                        criterion,
                        hint,
                        bytestring,
-                       deepseq
+                       deepseq,
+                       random-shuffle
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -62,6 +63,7 @@ executable Frontend
                        criterion,
                        hint,
                        bytestring,
-                       deepseq
+                       deepseq,
+                       import random-shuffle
   hs-source-dirs:      src
   default-language:    Haskell2010
